<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="249dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck"
        tools:layout_editor_absoluteX="9dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="297dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="9dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="377dp"
        android:text="@string/log_in"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck"
        tools:layout_editor_absoluteX="2dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="425dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="71dp" />


</androidx.constraintlayout.widget.ConstraintLayout>