<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradBlack"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/SignUp"
        android:layout_width="391dp"
        android:layout_height="108dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person" />

    <EditText
        android:id="@+id/email"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="239dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:fontFeatureSettings=""
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/DarkRed"
        android:textColorHint="@color/DarkRed"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:layout_marginStart="7dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/DarkRed"
        android:textColorHint="@color/DarkRed"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/phoneN"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/DarkRed"
        android:textColorHint="@color/DarkRed"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        tools:layout_editor_absoluteX="7dp" />

    <EditText
        android:id="@+id/person"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/nameRequest"
        android:inputType="textPersonName"
        android:textColor="@color/DarkRed"
        android:textColorHint="@color/DarkRed"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/phoneN"
        tools:layout_editor_absoluteX="7dp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView4"
        android:layout_width="298dp"
        android:layout_height="107dp"
        android:src="@drawable/sign"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />
    -->


</androidx.constraintlayout.widget.ConstraintLayout>